Fix small fonts on mobile with device width meta tag

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -45,5 +45,4 @@ $pageAnimateTime: .4s;
   position: absolute;
   background: $pageBg;
   width: 100%;
-  height: 100%;
 }
